# PX4_leader-follower_byCameraDetection

./: README.md
Ros_WS/src/drone_control/: CMakeLists.txt  package.xml
Ros_WS/src/drone_control/src/: UIInitializer.cpp  UIInitializer.h  drone_control.cpp  drone_control.h  main.cpp  mainwindow.cpp  mainwindow.h
Utils/: simulationStart.yaml
Utils/x500_depth/: model.sdf
