<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_control</name>
  <version>0.0.1</version>
  <description>Combined Project for move_forward and drone_GUI</description>

  <maintainer email="youremail@yourdomain.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for move_forward -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>dronecontrol_msg</depend>

  <!-- Dependencies for drone_GUI -->
  <depend>qtbase5-dev</depend>
  <depend>qt5-qmake</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
